Add 'vendor.' prefix to lights HAL service name
To prevent property name collisions between properties of system and
vendor, 'vendor.' prefix must be added to a vendor HAL service name.
You can see the details in http://go/treble-sysprop-compatibility.

Test: succeeded building and tested on a walleye device
Bug: 36796459
Change-Id: I4e8fbee791ec917a8f627a1366f4d44ec7e6febc

--- a/light/android.hardware.light@2.0-service.ef56.rc
+++ b/light/android.hardware.light@2.0-service.ef56.rc
@@ -40,7 +40,7 @@ on boot
     chown system radio /sys/class/leds/led:rgb_blue/pan_rainbow
     chown system radio /sys/class/leds/led:rgb_blue/pan_rgb_off
 
-service light-hal-2-0 /vendor/bin/hw/android.hardware.light@2.0-service.ef56
+service vendor.light-hal-2-0 /vendor/bin/hw/android.hardware.light@2.0-service.ef56
     interface android.hardware.light@2.0::ILight default 
     class hal
     user system
